# memo-tori-gtk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  agent.md
.github/: release-please-config.json
.github/workflows/: release.yml
assets/: io.github.memo_tori.gtk.desktop
migrations/: 001_init.sql
scripts/: build-deb.sh  install-local.sh
src/: app.rs  config.rs  db.rs  main.rs  paths.rs
