[package]
name = "memo-tori-gtk"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Ultra-fast thought capture app for Linux (GTK4 + SQLite)"

[dependencies]
anyhow = "1.0"
dirs = "6.0"
gtk = { package = "gtk4", version = "0.9" }
notify-rust = "4.11"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
uuid = { version = "1.11", features = ["v4"] }
